feat: update Copilot instructions with repository-specific static-analysis and build constraints